trying to get things working